# py_hub_studio_store

./: .gitignore  README.md  docker-compose.yml  migrate.sh  pyproject.toml
app/: settings.py  urls.py
fixtures/goods/: prod.json  products.json
goods/: admin.py  models.py  urls.py  utils.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_products_options.py
goods/templates/goods/: catalog.html  product.html
goods/templatetags/: goods_tags.py
main/: views.py
main/templates/main/: about.html  base.html  index.html
templates/: base.html
templates/includes/: notifications.html
users/: forms.py  models.py  views.py
users/templates/users/: login.html  profile.html  registration.html
