[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["k.barylnikov <ipt_git_bot@ipt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pillow = "^10.3.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipython = "^8.24.0"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
